# ConceptDFS

./: .gitignore  README.md  pyproject.toml
concept_dfs/: app.py  cli.py  db.py  llm.py  paths.py  provider.py
tests/: test_app.py  test_cli.py  test_db.py  test_llm.py  test_provider.py  test_tools.py
tools/: gemini_tools.json  inspect_db.sh
