[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concept_dfs"
version = "0.3.0"
description = "A keyboard-driven CLI tool for exploring branching knowledge using a Stack-based DFS over an LLM-generated graph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.3",
    "textual>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0"
]

[project.scripts]
concept-dfs = "concept_dfs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
